# netreports

./: .coverage  LICENSE  README.md  invoke.example.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/workflows/: ci.yml
development/: Dockerfile  creds.env  docker-compose.base.yml  docker-compose.db.yml
docs/: index.md
netreports/: __init__.py  main.py  version.py
netreports/api/reports/: __init__.py
netreports/api/reports/ports/: __init__.py  endpoints.py  models.py
netreports/core/: config.py  tasks.py  utils.py
netreports/core/api/: __init__.py  reports.py
netreports/core/crud/: base.py
netreports/core/db/: mongodb_utils.py
netreports/crud/: base.py  commands.py  devices.py
netreports/db/: mongodb.py  mongodb_utils.py
netreports/db/models/: commands.py  devices.py
netreports/schemas/: base.py  choices.py  commands.py  devices.py
netreports/ui/: main.py
tests/: conftest.py
tests/fixtures/: get_all_devices.json
tests/integration/: conftest.py  test_commands.py  test_devices.py
tests/integration/test_reports/: __init__.py  test_ports.py
tests/unit/: test_devices.py
