[tool.poetry]
name = "netreports"
version = "0.1.0"
description = "FastAPI backed with MongoDB to store network reports"
authors = ["Mikhail Yohman & Kyle Bush"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/FragmentedPacket/netreports"
repository = "https://github.com/FragmentedPacket/netreports"
include = [
    "LICENSE",
    "README.md",
]
packages = [
    { include = "netreports" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pymongo = "^4.4.0"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
ipython = "*"
Markdown = "*"
mkdocs = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "^4.0.0"
toml = "*"
yamllint = "*"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.master]
# Include the pylint_django plugin to avoid spurious warnings about Django patterns
ignore = ".venv"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx = "^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!__init__).*\\.py"
match-dir = "(?!tests|migrations|development)[^\\.].*"
# D212 is enabled by default in google convention, and complains if we have a docstring like:
# """
# My docstring is on the line after the opening quotes instead of on the same line as them.
# """
# We've discussed and concluded that we consider this to be a valid style choice.
add_ignore = "D212"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --cov=netreports --cov-report term-missing"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
